[package]
name = "ttare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
color-eyre = "0.6.2"
rayon = "1.5.3"
tar = "0.4.38"
rustc-hash = "1.1.0"
flate2 = "1.0.24"

[profile.release]
lto = true
